--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -127,7 +127,7 @@
 
     #blazor-error-ui {
         background: lightyellow;
-        bottom: 0;
+        bottom: 44px;
         box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
         display: none;
         left: 0;
