Try add DependencyInjection

--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,3 +9,4 @@
 @using BlazorProfile
 @using BlazorProfile.Shared
 @using BlazorProfile.Shared.Components
+@using Microsoft.Extensions.DependencyInjection.Abstractions
