Add Portfolio Button

--- a/BlazorProfile/wwwroot/css/app.css
+++ b/BlazorProfile/wwwroot/css/app.css
@@ -26,6 +26,11 @@
 }
 
 
+.MyButton{
+    border: 1px solid darkgray;
+    border-radius:30px;
+}
+
 
 @media screen and (max-width:1335px) {
     .leftText {
