Added some polish

--- a/BlazorProfile/Pages/Contact.razor
+++ b/BlazorProfile/Pages/Contact.razor
@@ -3,8 +3,8 @@
 <PageTitle>Andy Hopkins | Contact</PageTitle>
 
 <h1>I'd love to hear from you!</h1>
-<a href="mailto:andyghopkins@gmail.com">
-    <h2 class="oi oi-envelope-closed center" />
+<a href="mailto:andyghopkins@gmail.com" class="noUnderline">
+    <h1 class="oi oi-envelope-closed center mail" />
 </a>
 <p class="centerText">
     Hi there!  If you have reached this page, please drop me a note to let me know you visited!  You can reach me by email at andyghopkins@gmail.com, or view my various online profiles via the links at the bottom of the page.  Looking forward to hearing from you!
