--- a/BlazorProfile/Pages/Index.razor
+++ b/BlazorProfile/Pages/Index.razor
@@ -9,10 +9,13 @@
     <div class="leftText">
         <h2>Dad. Massage Therapist. Programmer.</h2>
         <p>  After many years of running a successful Massage Therapy practice, Andy decided to pursue his passion for technology by teaching himself to code!  He has taken a variety of online courses to become familiar with many different languages and frameworks.  While developing games and passion projects in his spare time, he is also seeking full time employment in the field.</p>
-        <NavLink href="portfolio" class="MyButton">
-            <img src=images/Tofubutton.png />
-        </NavLink>
-        <p class="font-italic">Button Art Credit to the excellent Mr. TofuLoaf</p>
+        <a href="portfolio" class="buttonText">
+            <div class="MyButton">
+                <div class="decoration1" />
+                <div class="decoration2" />
+            <p class="buttonText">View<br />Portfolio</p>
+            </div>
+        </a>
     </div>
     <img class="shadow mw-100" width="600" src="images/Photo.jpg"/>
 </div>
