--- a/BlazorProfile/Pages/Portfolio.razor
+++ b/BlazorProfile/Pages/Portfolio.razor
@@ -15,7 +15,7 @@
                Toolsused="C#, Blazor, .NET 6" Url="https://www.fantasyprobending.com/" Sourcecode="" />
 <PortfolioItem Picturesrc="images/SDGMarin.png" Title="Google Sheets API"
                Description="Create a method of using Google Sheets as a database for storing a list of partner companies to display on client's website.  After fetching the data, use Javascript logic to determine which pages each link gets displayed on.  Adapted method of calling data to when Google Sheets updated their API."
-               Toolsused="XMLHTTP Requests, JSON data management, JavaScript" Url="https://sdgmarin.org/1-no-poverty/#tab-7d61aa97c4f8ec4b24f" Sourcecode="https://codepen.io/MorningPants/pen/vYZJxQP" />
+               Toolsused="Google Sheets, XMLHTTP Requests, JSON data management, JavaScript" Url="https://sdgmarin.org/1-no-poverty/#tab-7d61aa97c4f8ec4b24f" Sourcecode="https://codepen.io/MorningPants/pen/vYZJxQP" />
 <PortfolioItem Picturesrc="images/gatsby.png" Title="Gatsby Bootcamp with Contentful" 
                Description="Create a dynamic blog page in Gatsby using React, pulling data from a Contentful CMS" Toolsused="React, Gatsby, Contenful CMS, SCSS" Url="https://morningpants.github.io/gatsby-bootcamp/" Sourcecode="https://github.com/MorningPants/gatsby-bootcamp" />
 <PortfolioItem Picturesrc="images/FrontEndMentor.png" Title="Frontend Mentor CSS animation" Description="Simple CSS design challenge" Toolsused="HTML, CSS animations" Url="https://morningpants.github.io/Practice-page-1/" Sourcecode="https://github.com/MorningPants/Practice-page-1" />
