--- a/BlazorProfile/Shared/Components/PortfolioItem.razor.css
+++ b/BlazorProfile/Shared/Components/PortfolioItem.razor.css
@@ -7,6 +7,7 @@
 
 .container{
     background: lightgray;
+    width:90vw;
     border-radius: 45px;
     border: 2px solid darkgray;
     text-align: center;
@@ -18,7 +19,6 @@
 
 .description{
     margin: auto;
-    width: 700px;
 }
 
 .bold{
@@ -46,4 +46,13 @@
         margin-top: -32px;
         padding-top: 48px !important;
     }
+
+
+}
+
+@media only screen and (min-width: 1301px) {
+    .description {
+        width: 700px;
+    }
+
 }
