Add Button Highlight

--- a/BlazorProfile/wwwroot/css/app.css
+++ b/BlazorProfile/wwwroot/css/app.css
@@ -49,6 +49,10 @@
     position: relative;
 }
 
+.MyButton:hover {
+    background: linear-gradient(#b5b5b5, #868686);
+}
+
 .decoration1 {
     background: #a7a5a5;
     width: 47px;
