Add Colors Project and Featured Project on Homepage

--- a/BlazorProfile/Pages/Index.razor
+++ b/BlazorProfile/Pages/Index.razor
@@ -6,16 +6,42 @@
 
 
 <div class="d-flex justify-content-center flex-wrap">
-    <div class="leftText">
-        <h2>Dad. Massage Therapist. Programmer.</h2>
-        <p>  After many years of running a successful Massage Therapy practice, Andy decided to pursue his passion for technology by teaching himself to code!  He has taken a variety of online courses to become familiar with many different languages and frameworks.  While developing games and passion projects in his spare time, he is also seeking full time employment in the field.</p>
-        <a href="portfolio" class="buttonText">
-            <div class="MyButton">
-                <div class="decoration1" />
-                <div class="decoration2" />
-            <p class="buttonText">View<br />Portfolio</p>
-            </div>
-        </a>
-    </div>
-    <img class="shadow mw-100" width="600" src="images/Photo.jpg"/>
+	<div>
+		<div class="leftText">
+			<h2>Frontend Web Developer and Programmer</h2>
+			<p>  After many years of running a successful Massage Therapy practice, Andy decided to pursue his passion for technology by teaching himself to code!  He has taken a variety of online courses to become familiar with many different languages and frameworks.  While developing games and passion projects in his spare time, he is also seeking full time employment in the field.</p>
+			<a href="portfolio" class="buttonText">
+				<div class="MyButton">
+					<div class="decoration1" />
+					<div class="decoration2" />
+					<p class="buttonText">View<br />Portfolio</p>
+				</div>
+			</a>
+
+		</div>
+		<div class="latest">
+			<h2>Latest Project:</h2>
+
+			<a href="https://morningpants.github.io/CSS-Color-Guesser/">
+				<img src="images/Color.png" width="267" height="200" class="hexPic" />
+			</a>
+			<div class="container">
+
+				<h2>Color Guesser - Svelte App</h2>
+				<p class="description">"Quick App built in Svelte to test your knowledge of the named CSS colors."</p>
+				<span class="bold">Tools used: </span><span class="bold green">"Svelte, GitHub Pages, Javascript"</span>
+				<div class="d-flex justify-content-center align-items-center">
+
+					<a href=https://github.com/MorningPants/CSS-Color-Guesser>
+						<p type="button" class="btn btn-light m-3 mb-0">View Code</p>
+					</a>
+
+					<a href="https://morningpants.github.io/CSS-Color-Guesser/">
+						<p type="button" class="btn btn-light m-3 mb-0">View Page</p>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<img class="shadow mw-100" width="600" src="images/Photo.jpg" />
 </div>
