--- a/BlazorProfile/Pages/Portfolio.razor
+++ b/BlazorProfile/Pages/Portfolio.razor
@@ -4,6 +4,10 @@
 
 <h1>Portfolio</h1>
 
+
+<PortfolioItem Picturesrc="images/Color.png" Title="Color Guesser - Svelte App"
+               Description="Quick App built in Svelte to test your knowledge of the named CSS colors."
+               Toolsused="Svelte, GitHub Pages, Javascript" Url="https://morningpants.github.io/CSS-Color-Guesser/" Sourcecode="https://github.com/MorningPants/CSS-Color-Guesser" />
 <PortfolioItem Picturesrc="images/AZSS.png" Title="Arizona Sky School Website"
                Description="Update the Arizona Sky School website with a fresh look from a figma template.  Create a dynamic method of adding new employees to the Staff page."
                Toolsused="HTML, CSS, JavaScript, Wordpress, Figma" Url="https://skyschool.arizona.edu/" Sourcecode="" />
